# docs/swagger.json
@@ -4,8 +4,23 @@
         "contact": {}
     },
     "paths": {
-        "/user/createUser": {
+        "/index": {
             "get": {
+                "tags": [
+                    "首页"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/createUser": {
+            "post": {
                 "tags": [
                     "用户模块"
                 ],
@@ -32,7 +47,7 @@
             }
         },
         "/user/deleteUser": {
-            "get": {
+            "put": {
                 "tags": [
                     "用户模块"
                 ],
@@ -172,8 +187,38 @@
                 }
             }
         },
-        "/user/updateUser": {
+        "/user/login": {
             "post": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "登录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/updateUser": {
+            "put": {
                 "tags": [
                     "用户模块"
                 ],
@@ -244,7 +289,7 @@
                     "description": "名字",
                     "type": "string"
                 },
-                "pass_word": {
+                "password": {
                     "description": "密码",
                     "type": "string"
                 },
@@ -319,7 +364,7 @@
                     "description": "名字",
                     "type": "string"
                 },
-                "pass_word": {
+                "password": {
                     "description": "密码",
                     "type": "string"
                 },
@@ -392,7 +437,7 @@
                     "description": "名字",
                     "type": "string"
                 },
-                "pass_word": {
+                "password": {
                     "description": "密码",
                     "type": "string"
                 },
